<resources>
    <string name="app_name">guia_4</string>
    <string name="servicios">SERVICIOS</string>
    <string name="portafolio">PORTAFOLIO</string>
    <string name="acerca_de">ACERCA DE</string>
    <string name="contacto">CONTACTO</string>
    <string name="redes_sociales">REDES SOCIALES</string>
    <string name="mi_aplicaci_n_de_negocios">Mi aplicación de Negocios</string>
    <string name="bot_n_seleccionado">Botón Seleccionado:</string>
</resources>